# Screenshot-and-Vedio-Recording-Functionality-Streamer.

./: CMakeLists.txt  Main.qml  README.md  main.cpp  opencvimageprovider.cpp  opencvimageprovider.h  videostreamer.cpp  videostreamer.h
